--- a/healthindia/pubspec.yaml
+++ b/healthindia/pubspec.yaml
@@ -17,6 +17,7 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+gender_selector:
   flutter:
     sdk: flutter
 
@@ -42,3 +43,5 @@ flutter:
 
   assets:
     - assets/healthyindia.jpeg
+    - assets/bmi.jpg
+    - assets/bmical.jpg
