--- a/loginpage/pubspec.yaml
+++ b/loginpage/pubspec.yaml
@@ -43,6 +43,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/geeky.png
+  - assets/logo.png
+  - assets/images.jpeg
+  
+
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
